# job-hunter

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
bot/: __init__.py  utils.py
bot/handlers/: __init__.py  jobs.py  start.py
bot/middlewares/: container_middleware.py
config/: __init__.py  settings.py
core/: __init__.py  container.py  exceptions.py  logging_setup.py
database/: __init__.py  engine.py  models.py  repository.py  sqlalchemy_repository.py
models/: __init__.py  enums.py  job_posting.py
scrapers/: __init__.py  base.py  orchestrator.py
scrapers/implementations/: __init__.py  dummy_scraper.py  gaijinpot.py  green.py  indeed.py  mynavi.py  mynavi2027.py  wantedly.py
services/: __init__.py  notifier.py
tests/: __init__.py  conftest.py  test_dummy_scraper.py  test_job_posting.py  test_sqlalchemy_repository.py
