[project]
name = "job-hunter"
version = "0.1.0"
description = "Async Telegram bot aggregating job listings from Japanese job boards"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.10,<4.0",
    "playwright>=1.50,<2.0",
    "sqlalchemy>=2.0,<3.0",
    "pydantic>=2.10,<3.0",
    "pydantic-settings>=2.5,<3.0",
    "aiosqlite>=0.20,<1.0",
    "apscheduler>=3.10,<4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "ruff>=0.8",
    "mypy>=1.13",
]
postgres = ["asyncpg>=0.30"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
